--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <p>Use arrow keys to move around</p>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/js/data.js"></script>
